<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fart Cover</string>
    <string name="hello_world">Hello world!</string>
    <string name="PlayFaucet">Bathroom Sink</string>
    <string name="StopSound">Stop</string>
    <string name="HandDryer">Hand Dryer</string>
    <string name="about">This is not the button you are looking for</string>
    <string name="donate">Donate</string>
    <string name="ethan">For the non shy poopers...</string>
    <string name="Fart">Play</string>
    <string name="toilet">Toilet</string>

</resources>
